[gd_scene load_steps=2 format=3 uid="uid://ds1pifb87o3kn"]

[ext_resource type="Script" path="res://Scenes/Interface/Menus/NewGameMenu/NewGameMenu.gd" id="1_vfep0"]

[node name="NewGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vfep0")

[node name="EasyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 178.0
offset_right = 828.0
offset_bottom = 251.0
text = "easy_button"

[node name="NormalButton" type="Button" parent="."]
layout_mode = 0
offset_left = 551.0
offset_top = 294.0
offset_right = 830.0
offset_bottom = 367.0
text = "normal_button"

[node name="HardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 410.0
offset_right = 831.0
offset_bottom = 483.0
text = "hard_button"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 575.0
offset_right = 447.0
offset_bottom = 648.0
text = "return_button"
